Fix mobile nav jumping (closes #9)

--- a/_sass/temple/_header.scss
+++ b/_sass/temple/_header.scss
@@ -248,6 +248,7 @@ div.college-nav {
     }
   }
   .nav-toggle-link {
+    cursor: pointer;
     text-align: center;
     margin-top: .75rem;
     margin-right: 1.5rem;
